Build native recommendify worker

--- a/sidekiq/Dockerfile
+++ b/sidekiq/Dockerfile
@@ -7,4 +7,8 @@ ADD sidekiq-run /etc/service/sidekiq/run
 
 USER app
 RUN bundle exec whenever --update-crontab
+RUN cd $(bundle show recommendify); \
+    bundle install --path /tmp/recommendify-bundle; \
+    bundle exec rake build_native; \
+    rm -rf /tmp/recommendify-bundle
 USER root
